# ot-ncp

./: CMakeLists.txt  CPPLINT.cfg  README.md  overlay-no-bootloader.conf  prj.conf
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  main.yml
app/: CMakeLists.txt  prj.conf  west.yml
app/boards/: e73minimal_nrf52840.conf  e73minimal_nrf52840.overlay
app/boards/arm/E73-minimal/: Kconfig.defconfig  e73minimal_nrf52840.dts
app/boards/arm/e73minimal_nrf52840/: CMakeLists.txt  Kconfig.defconfig  e73minimal_nrf52840.dts  e73minimal_nrf52840_defconfig  pinctrl.dtsi
boards/: e73minimal_nrf52840.conf
boards/arm/E73-minimal/: Kconfig  Kconfig.board  board.c  e73minimal_nrf52840.dts  e73minimal_nrf52840.yaml
src/: CMakeLists.txt  main.c
src/nrf52840/: transport-config.h
src/src/: radio.c
